--- a/proposal.html
+++ b/proposal.html
@@ -40,17 +40,37 @@
 
 			<section>
 				<h2>Brief</h2>
-				The shape of this effigy is based off a Pine Cone because pine cones spread their seed by fire.  On the inside we will be playing with themes of light and dark, and mortality.  It is a three story
+				This three-story effigy is based off of the pine cone - nature’s true Phoenix rising from the ashes.  The pine cone has adapted to its harsh environment by encasing its cone scales in a resin, which melts during fires and releases its seed from within to germinate among the ashes.  
+
+				Both the exterior &amp; interior designs will play with themes of light, dark, mortality, immortality, &amp; the strength we gain through hardship whether we choose that path or not.  During the burn, the pine cone scales will pop open early, indicating their seed release &amp; display the glowing fire.  After the pine cone burns, amongst the ashes, a small metal sapling will be revealed.
+
 			</section>
 
 			<section>
 				<h2>The participant story</h2>
-				This year we are attempting to lead participants through something like a story by having a very clear entrance which winds it's way through scenes before reaching a soft end.  The story starts off with a set of stairs that wrap around the build and lead into an entrance on the back....
+				This year, we are attempting to lead participants through something like a story by having a very clear entrance which winds its way through scenes before reaching a soft end. 
+
+				The story starts off with a set of stairs that wrap around the piece and lead into an entrance at the back.  The back entrance empties the adventurer onto the second floor, where a wide tree trunk sits at the middle of the room, with branches spread across the width of the area.  This room is meant to represent the present -- life, growth, presence.
+
+				After spending some time in the tranquility of now, the explorer is called inside the great base of the trunk, down a winding stair/ladder which takes them to the underground.  Roots accumulate as they descend into the darkness.  At the bottom, though, there is muted revelry - a place for the dead to raise a glass to the infinite past, not joyful, but not wistful.  A place that is… Some performers will be interspersed into this space, but the goal is for it to be unclear who is performing and who is not.
+
+				The traveler can leave the experience now from the back exit, if they wish, believing that life &amp; death is all there is… But, the true inquisitor’s curiosity tells him there is more.  They climb the spiral stair/ladder back up and find another small ladder as they ascend, hidden just inside the trunk at the second level.  Climbing the ladder, they are brought into infinite space, resting upon clouds. A small window will encase a miniature model of the tree below, as though looking down upon it all from a great distance.  A place to be at peace with the great unknown. 
+
+In the back of the effigy will be a small courtyard with art &amp; flame effects.  This will serve as a place for the community to bring small art or other items that will create a gathering space.
+
 			</section>
 
 			<section>
 				<h2>Planned Features</h2>
-				Forest, Underground, Cloud lounge, Flame canon spires, Fire garden, Ambience, Afterlife Performers, Water Feature
+					<ul>
+						<li>Forest</li>
+						<li>Underground</li>
+						<li>Cloud Lounge</li>
+						<li>Flame cannon spires</li>		
+						<li>Ambience</li>
+						<li>AfterLife Performers</li>	
+						<li>Water Feature</li>																						
+					</ul>
 			</section>
 		</div>
 
@@ -87,36 +107,70 @@
 			<h1>Process</h1>
 
 			<section>
-				<h2>Management</h2>
-				Multiple teams: flame fx, decor, drama, build, fluff.
+				<h2>Project Management Summary</h2>
+				The process will be divided up into creating the major components for each level and we’ll use jigs for repeating beams &amp; decking. The leaders will be myself, Seph Reed, and whichever Daftees feel like taking a teaching position or are particularly attached to a portion of the piece (we have a few who’ve already expressed interest). Like last year, we’ll have a build book with detailed designs for each of the components and a count that we’ll print each week. 
 			</section>
+			<section>
+				<h2>Teams</h2>
+					<ul>
+						<li>Build Crew </li>The usual DaFT build crew will likely make up the bulk of this team.  As with last year, we will highly encourage new members and incorporate simple tasks for those who can show up minimally.  There will be more challenging tasks for the experienced builder, along with a healthy amount of opportunity to grow skills &amp; responsibilities throughout the build, as individuals progress or express more interest.
+						<li>Flame Effects</li>There will be a Flame Effects lead, as well as an entire team dedicated to ensuring the flame effects come together on time and are managed appropriately during the event.
+						<li>Decor</li>The decor team will be a mix of the Build team, as well as some specific callouts for painters &amp; other visual artists.
+						<li>Performance Art</li>The underground will include a number of individuals that will act as the dead, Dia de los Muertos-style, always serving as fixtures in the effigy that one can expect to be present and with whom to engage.  These performers may also advise of possible adventures outside of the effigy to discover stories of their life &amp; death and encourage exploration into the event.		
+						<li>Fluffers</li>No DaFT build is complete without the help of those that just want to keep everyone fed &amp; refreshed.  There will be at least 1 fluffer available during all onsite logistics.
+					</ul>
+				
 
+			</section>
 			<section>
 				<h2>Build/Schedule</h2>
 				Here is the current plan for our order-of-operations:
-				- 1F Arches
-				- 1F Deck
-				- 1F Spiral Staircase
-				- 3F Arches
-				- 3F Decor
-				- 1F Steep outter staircase
-				- 2F Deck
-				- 1F Decor
-				- 2F Arches
-				- 2F Decor
+					<ul>
+						<li>Week 1 (Feb 11):  Prep, organize, make jigs</li>
+						<li>Week 2 (Feb 18):  1st floor Arches</li>
+						<li>Week 3 (Feb 25):  1st floor Deck</li>
+						<li>Week 4 (Mar 4):  1st floor Spiral Staircase</li>		
+						<li>Week 5 (Mar 11):  3rd floor Arches</li>
+						<li>Week 6 (Mar 18):  3rd floor Decor</li>	
+						<li>Week 7 (Mar 25):  1st floor steep outer staircase</li>	
+						<li>Week 8 (Apr 01):  2nd floor deck</li>
+						<li>Week 9 (Apr 08):  1st floor decor</li>
+						<li>Week 10 (Apr 15):  2nd floor Arches</li>
+						<li>Week 11 (Apr 22):  2nd floor Decor</li>		
+						<li>Week 12 (Apr 29):  Finishing Details</li>
+						<li>Week 13 (May 06):  Mid-week, start teardown</li>	
+						<li>Week 14 (May 13):  Mother’s Day (light teardown Sunday)</li>	
+						<li>Week 15 (May 20):  Pre-event loadout &amp; initial setup</li>		
+						<li>Week 16 (May 27):  Event</li>		
+						<li>Week 17 (June 3):  Post-event cleanup</li>			
+					</ul>
+
 			</section>
 
 			<section>
 				<h2>Criteria</h2>
 
-				<b>Safety</b> - <br>
-				<b>Transportation</b> - <br>
-				<b>Burn</b> - <br>
-				<b>Burn-Ban</b> - <br>
-				<b>Cleanup</b> - <br>
-				<b>Budget</b> - <br>
-				<b>Materials</b> - <br>
-				<b>Rentals</b> - <br>
+				<b>Safety</b> - We’ll likely have the same rules as last year.  No drinking and using table saws, put up railings early, be clever not risky.  Consent for all the things:  photography, interrupting people while working, hugs.<br>
+				<b>Transportation</b> - The design is made to flat pack, so space in the usual 3 moving trucks should be fine. It is also designed out of lots and lots of boards, which means it will be lots of moving weight, so many hands for loadout will be imperative.  <br>
+				<b>Burn</b> - During the event, the pine cone nubs will be closed.  When the effigy burns, they will start to open up, showing the glow of the fire inside.  The spiral staircase and other elements of the siding & walls are designed to aerate the fire up around in one direction, encouraging a small interior fire tornado.<br>
+				<b>Burn-Ban</b> - If we’ve got to take it apart for a Burn-ban, we’ll have had ample opportunity to understand how to do so.  We’ll check the forecast before the event and ask for volunteers strictly to assist in the case of a Burn-ban, since many of the main DaFT crew will be exhausted.<br>
+				<b>Cleanup</b> - Similar to the Burn-ban, since many of the main DaFT crew will be exhausted, we will put a special call-out for cleanup volunteers to assist after the event is over.<br>
+				<b>Budget</b> - See Below...<br>
+				<b>Materials</b> - See Below...<br>
+				<b>Rentals</b> - The usual VR, Cherry Picker, & trencher should do.<br>
+				<b>Other Considerations</b> - The usual VR, Cherry Picker, & trencher should do.<br>
+			</section>
+
+						<section>
+				<h2>Other Considerations</h2>
+
+				<b>Non-toxic burn: </b> Wiring, metal, plastic, etc. will be removed for the burn.<br>
+				<b>Community involvement: </b> This was the greatest impetus of my joining DaFT and the greatest thing I hope to empower in others.  There will be a lot of little details that so many in this community have to offer and you can be that we will be putting out a lot of callouts for new DaFT blood.<br>
+				<b>Finished by Friday at Flipside: </b> Last year’s build opened Thursday night and this design is intended to follow along the same timeline.  There may be small additions after we open, but nothing that should get in the way of people enjoying the effigy.<br>
+				<b>Test Build: </b> The plan is for level 1 & level 2 to just fit in the warehouse as a whole piece.  The 3rd level is smaller and should fit next to the effigy for a dry run just before we start tearing down in the last week of May.<br>
+				<b>Experiences = Connection:  </b> The mythos of the Phoenix from the ashes is an incredibly human concept & desire.  Further, the fact that participants can go inside & interact with the piece as well as each other will create beautiful memories to cherish long after what the piece looked like remains… What it felt like is what will be remembered and loved.<br>
+				<b>Possessing a consumable aspect: </b> It will be mostly made of wood, but there may be little surprises that are made of metal for people to take with them as a token. Regardless, leave no trace is paramount.<br>
+				<b>Community Ownership:  </b> Any materials not burned with the effigy, such as LEDs, electrical, propane, & other components are that of the Flipside community and will be shared for future DaFT or LLC-approved pieces.<br>
 			</section>
 		</div>
 
