Edited considerations duplicate and ampersands

--- a/proposal.html
+++ b/proposal.html
@@ -152,25 +152,24 @@ In the back of the effigy will be a small courtyard with art &amp; flame effects
 
 				<b>Safety</b> - We’ll likely have the same rules as last year.  No drinking and using table saws, put up railings early, be clever not risky.  Consent for all the things:  photography, interrupting people while working, hugs.<br>
 				<b>Transportation</b> - The design is made to flat pack, so space in the usual 3 moving trucks should be fine. It is also designed out of lots and lots of boards, which means it will be lots of moving weight, so many hands for loadout will be imperative.  <br>
-				<b>Burn</b> - During the event, the pine cone nubs will be closed.  When the effigy burns, they will start to open up, showing the glow of the fire inside.  The spiral staircase and other elements of the siding & walls are designed to aerate the fire up around in one direction, encouraging a small interior fire tornado.<br>
+				<b>Burn</b> - During the event, the pine cone nubs will be closed.  When the effigy burns, they will start to open up, showing the glow of the fire inside.  The spiral staircase and other elements of the siding &amp; walls are designed to aerate the fire up around in one direction, encouraging a small interior fire tornado.<br>
 				<b>Burn-Ban</b> - If we’ve got to take it apart for a Burn-ban, we’ll have had ample opportunity to understand how to do so.  We’ll check the forecast before the event and ask for volunteers strictly to assist in the case of a Burn-ban, since many of the main DaFT crew will be exhausted.<br>
 				<b>Cleanup</b> - Similar to the Burn-ban, since many of the main DaFT crew will be exhausted, we will put a special call-out for cleanup volunteers to assist after the event is over.<br>
 				<b>Budget</b> - See Below...<br>
 				<b>Materials</b> - See Below...<br>
-				<b>Rentals</b> - The usual VR, Cherry Picker, & trencher should do.<br>
-				<b>Other Considerations</b> - The usual VR, Cherry Picker, & trencher should do.<br>
+				<b>Rentals</b> - The usual VR, Cherry Picker, &amp; trencher should do.<br>
 			</section>
 
 						<section>
 				<h2>Other Considerations</h2>
 
 				<b>Non-toxic burn: </b> Wiring, metal, plastic, etc. will be removed for the burn.<br>
-				<b>Community involvement: </b> This was the greatest impetus of my joining DaFT and the greatest thing I hope to empower in others.  There will be a lot of little details that so many in this community have to offer and you can be that we will be putting out a lot of callouts for new DaFT blood.<br>
+				<b>Community involvement: </b> This was the greatest impetus of my joining DaFT and the greatest thing I hope to empower in others.  There will be a lot of little details that so many in this community have to offer and you can bet that we will be putting out a lot of callouts for new DaFT blood.<br>
 				<b>Finished by Friday at Flipside: </b> Last year’s build opened Thursday night and this design is intended to follow along the same timeline.  There may be small additions after we open, but nothing that should get in the way of people enjoying the effigy.<br>
-				<b>Test Build: </b> The plan is for level 1 & level 2 to just fit in the warehouse as a whole piece.  The 3rd level is smaller and should fit next to the effigy for a dry run just before we start tearing down in the last week of May.<br>
-				<b>Experiences = Connection:  </b> The mythos of the Phoenix from the ashes is an incredibly human concept & desire.  Further, the fact that participants can go inside & interact with the piece as well as each other will create beautiful memories to cherish long after what the piece looked like remains… What it felt like is what will be remembered and loved.<br>
+				<b>Test Build: </b> The plan is for level 1 &amp; level 2 to just fit in the warehouse as a whole piece.  The 3rd level is smaller and should fit next to the effigy for a dry run just before we start tearing down in the last week of May.<br>
+				<b>Experiences = Connection:  </b> The mythos of the Phoenix from the ashes is an incredibly human concept &amp; desire.  Further, the fact that participants can go inside &amp; interact with the piece as well as each other will create beautiful memories to cherish long after what the piece looked like remains… What it felt like is what will be remembered and loved.<br>
 				<b>Possessing a consumable aspect: </b> It will be mostly made of wood, but there may be little surprises that are made of metal for people to take with them as a token. Regardless, leave no trace is paramount.<br>
-				<b>Community Ownership:  </b> Any materials not burned with the effigy, such as LEDs, electrical, propane, & other components are that of the Flipside community and will be shared for future DaFT or LLC-approved pieces.<br>
+				<b>Community Ownership:  </b> Any materials not burned with the effigy, such as LEDs, electrical, propane, &amp; other components are that of the Flipside community and will be shared for future DaFT or LLC-approved pieces.<br>
 			</section>
 		</div>
 
