--- a/proposal.html
+++ b/proposal.html
@@ -7,6 +7,9 @@
 
 
 <div id="widescreen"></div>
+<div id="printLink">
+	Web Version: <a href="MistyNickle.github.io/DaFT_2018/proposal.html">MistyNickle.github.io/DaFT_2018/proposal.html</a>
+</div>
 
 <content>
 
@@ -15,11 +18,9 @@
 	Email: -->
 	<div id="header">
 		<h1>PINE Cononagon</h1>
-
 		Misty Nickle<br>
 		206-853-1847<br>
-		MistyNickle@gmail.com<br>
-
+		SolipsistParadox@gmail.com<br>
 
 	</div>
 	<div id="ground">
@@ -171,42 +172,41 @@
 
 			<section>
 				<h2>Criteria</h2>
+				<ul>
+					<li><b>Safety</b> - We'll likely have the same rules as last year.  No drinking and using table saws, put up railings early, be clever not risky.  Consent for all the things:  photography, interrupting people while working, hugs.</li>
 
-				<b>Safety</b> - We'll likely have the same rules as last year.  No drinking and using table saws, put up railings early, be clever not risky.  Consent for all the things:  photography, interrupting people while working, hugs.<br><br>
+					<li><b>Transportation</b> - The design is made to flat pack, so space in the usual 3 moving trucks should be fine. It is also designed out of lots and lots of boards, which means it will be lots of moving weight, so many hands for loadout will be imperative.</li>
 
-				<b>Transportation</b> - The design is made to flat pack, so space in the usual 3 moving trucks should be fine. It is also designed out of lots and lots of boards, which means it will be lots of moving weight, so many hands for loadout will be imperative.  <br><br>
+					<li><b>Burn</b> - During the event, the pine cone nubs will be closed.  When the effigy burns, they will start to open up, showing the glow of the fire inside.  The spiral staircase and other elements of the siding &amp; walls are designed to aerate the fire up around in one direction, encouraging a small interior fire tornado.</li>
 
-				<b>Burn</b> - During the event, the pine cone nubs will be closed.  When the effigy burns, they will start to open up, showing the glow of the fire inside.  The spiral staircase and other elements of the siding &amp; walls are designed to aerate the fire up around in one direction, encouraging a small interior fire tornado.<br><br>
+					<li><b>Burn-Ban</b> - If we've got to take it apart for a Burn-ban, we'll have had ample opportunity to understand how to do so.  We'll check the forecast before the event and ask for volunteers strictly to assist in the case of a Burn-ban, since many of the main DaFT crew will be exhausted.</li>
 
-				<b>Burn-Ban</b> - If we've got to take it apart for a Burn-ban, we'll have had ample opportunity to understand how to do so.  We'll check the forecast before the event and ask for volunteers strictly to assist in the case of a Burn-ban, since many of the main DaFT crew will be exhausted.<br><br>
+					<li><b>Cleanup</b> - Similar to the Burn-ban, since many of the main DaFT crew will be exhausted, we will put a special call-out for cleanup volunteers to assist after the event is over.</li>
 
-				<b>Cleanup</b> - Similar to the Burn-ban, since many of the main DaFT crew will be exhausted, we will put a special call-out for cleanup volunteers to assist after the event is over.<br><br>
+					<li><b>Budget</b> - $10,000 (details coming soon).  We have other ideas to make this 20th anniversary effigy even more memorable, should the budget increase for this year.</li>
 
-				<b>Budget</b> - $10,000 (details coming soon).  We have other ideas to make this 20th anniversary effigy even more memorable, should the budget increase for this year.<br><br>
+					<li><b>Materials</b> - Detailed materials list will be provided with the itemized budget, later.</li>
 
-				<b>Materials</b> - Detailed materials list will be provided with the itemized budget, later.<br><br>
-
-				<b>Rentals</b> - The usual 3 Box Trucks, VR, Cherry Picker, &amp; trencher should do.<br><br>
-
+					<li><b>Rentals</b> - The usual 3 Box Trucks, VR, Cherry Picker, &amp; trencher should do.</li>
+				</ul>
 			</section>
 
 			<section>
 				<h2>Other Considerations</h2>
+				<ul>
+					<li><b>Non-toxic burn: </b> Wiring, metal, plastic, etc. will be removed for the burn, with the exception of the small steel sapling.</li>
 
-				<b>Non-toxic burn: </b> Wiring, metal, plastic, etc. will be removed for the burn, with the exception of the small steel sapling.<br><br>
+					<li><b>Community involvement: </b> Anyone can join DaFT.  This was the greatest impetus of me falling in love with the Flipside community and my greatest joy I hope to spark in others.  There will be a lot of little details that this diverse community can bring to the table for this build and we will be encouraging everyone to be involved in any way that they can.</li>
 
-				<b>Community involvement: </b> Anyone can join DaFT.  This was the greatest impetus of me falling in love with the Flipside community and my greatest joy I hope to spark in others.  There will be a lot of little details that this diverse community can bring to the table for this build and we will be encouraging everyone to be involved in any way that they can.<br><br>
+					<li><b>Finished by Friday at Flipside: </b> Last year's build opened Thursday night and this design is intended to follow along the same timeline.  There may be small artistic embellishments after we open (because, frankly, as long as it isn't on fire, we'll always find something to fix or improve), but nothing that should get in the way of people enjoying the effigy for the duration of the event.</li>
 
-				<b>Finished by Friday at Flipside: </b> Last year's build opened Thursday night and this design is intended to follow along the same timeline.  There may be small artistic embellishments after we open (because, frankly, as long as it isn't on fire, we'll always find something to fix or improve), but nothing that should get in the way of people enjoying the effigy for the duration of the event.<br><br>
+					<li><b>Test Build: </b> The plan is for level 1 &amp; level 2 to just fit in the warehouse as a whole piece.  The 3rd level is smaller and should fit next to the effigy for a dry run just before we  tear down in the last week of May. As with last year, we'd like the piece to be able to be enjoyed by those who might not be able to go to the event.</li>
 
-				<b>Test Build: </b> The plan is for level 1 &amp; level 2 to just fit in the warehouse as a whole piece.  The 3rd level is smaller and should fit next to the effigy for a dry run just before we  tear down in the last week of May. As with last year, we'd like the piece to be able to be enjoyed by those who might not be able to go to the event.<br><br>
+					<li><b>Relatable:  </b> The mythos of the Phoenix from the ashes is an incredibly human concept &amp; desire.  Further, the fact that participants can go inside &amp; interact with the piece as well as each other will create beautiful memories to cherish long after what the piece looked like remains... What it felt like is what will be remembered and loved.</li>
+					<li><b>Possessing a consumable aspect: </b> It will be mostly made of wood, but there may be little surprises that are made of metal for people to take with them as a token. Regardless, leave no trace is paramount.</li>
 
-				<b>Relatable:  </b> The mythos of the Phoenix from the ashes is an incredibly human concept &amp; desire.  Further, the fact that participants can go inside &amp; interact with the piece as well as each other will create beautiful memories to cherish long after what the piece looked like remains... What it felt like is what will be remembered and loved.<br><br>
-
-				<b>Possessing a consumable aspect: </b> It will be mostly made of wood, but there may be little surprises that are made of metal for people to take with them as a token. Regardless, leave no trace is paramount.<br><br>
-
-				<b>Community Ownership:  </b> Any materials not burned with the effigy, such as LEDs, electrical, propane, &amp; other components are that of the Flipside community and will be shared for future DaFT or LLC-approved pieces.<br><br>
-
+					<li><b>Community Ownership:  </b> Any materials not burned with the effigy, such as LEDs, electrical, propane, &amp; other components are that of the Flipside community and will be shared for future DaFT or LLC-approved pieces.</li>
+				</ul>
 			</section>
 		</div>
 
@@ -223,9 +223,15 @@
 		<div id="attachments">
 			<h1>Attachments</h1>
 			<section>
+				<h2>Glamor Shot</h2>
+				<img src="public/images/screens/glamor1.png"><br>
+				20ft tall, 28ft diameter (includes outer staircase)
+			</section>
+
+			<section>
 				<h2>Front Center</h2>
 				<img src="public/images/screens/front.png"><br>
-				Pine Cone nubs are not yet fully designed.  They <b>will not be plywood</b>.
+				Pine Cone nubs in image are undesigned.  They <b>will not be plywood</b>.
 			</section>
 
 			<section>
@@ -304,8 +310,8 @@ body {
 	background-color: black;
 	font-family: arial;
 	color: #333;
-	background-image: url("public/images/TexturesCom_SoilSand_small.png");
-	background-size: 40% auto;
+	/*background-image: url("public/images/TexturesCom_SoilSand_small.png");
+	background-size: 40% auto;*/
 	
 }
 
@@ -330,20 +336,30 @@ h1, h2, h3 {
 }
 
 
-#header {
-	background-image: url('public/images/pine_cone_and_stones.jpg');
-	height: 400px;
-	background-position: center;
-	background-size: 100% auto;
-	/*color: white;*/
-	color: #f5fbdc;
-	font-size: 20px;
-	text-shadow: 1px 1px #333, 1px -1px #333, -1px -1px #333, -1px 1px #333;
-	padding-top: 20px;
-	padding-left: 20px;
-
-	box-shadow: inset 0px 0px 50px rgba(0,0,0,0.5);
+#printLink {
+	display: none;
+	padding: 20px;
+	font-size: 18px;
+	color: white;
+	background-color: #222;
+	/*text-align: center;*/
 }
+
+	#printLink a, #printLink a:visited {
+		color: #68FFFF;;
+		/*font-size: 15px;*/
+	}
+
+@media print {
+    #printLink {
+    	display: block;
+    }
+
+    #widescreen {
+    	border-width: 0px;
+    }
+}
+
 
 content {
 	display: block;
@@ -355,16 +371,33 @@ content {
 }
 
 
+#header {
+	background-image: url('public/images/pine_cone_and_stones.jpg');
+	height: 400px;
+	background-position: center;
+	background-size: 100% auto;
+	/*color: white;*/
+	color: #f5fbdc;
+	font-size: 20px;
+	text-shadow: 1px 1px #333, 1px -1px #333, -1px -1px #333, -1px 1px #333, 0px 0px 5px #000;
+	padding-top: 20px;
+	padding-left: 20px;
+
+	box-shadow: inset 0px 0px 50px rgba(0,0,0,0.5);
+}
+
 #ground {
 	position: relative;
 	/*top: -100px;*/
 	padding-bottom: 50px;
 	/*background-image:  linear-gradient(transparent, black), url("public/images/TexturesCom_SoilCliff_noGrass.png");*/
-	background-size: auto, 100% auto;
-	background-repeat: no-repeat;
+	/*background-size: auto, 100% auto;
+	background-repeat: no-repeat;*/
 	/*margin-bottom: -100px;*/
 	/*background-image: linear-gradient(#f5fbdc 40%,  #895800 75%,  black);*/
 	/*background-image: linear-gradient(#dcaa7b, #3c392a 1%, #13120d 80%, #855804, black);*/
+	background-image: url("public/images/TexturesCom_SoilSand_small.png");
+	background-size: 40% auto;
 }
 
 	#transition {
@@ -400,7 +433,7 @@ content {
 	#ground  h1 {
 		position: relative;
 		left: -20px;
-		text-shadow: 1px 1px #333, 1px -1px #333, -1px -1px #333, -1px 1px #333;
+		text-shadow: 1px 1px #333, 1px -1px #333, -1px -1px #333, -1px 1px #333, 0px 0px 5px #000;
 		color: #d2ffb1;
 	}
 
@@ -417,7 +450,7 @@ content {
 		section> h2 {
 			position: relative;
 			left: -10px;
-			margin-bottom: 15px;
+			margin-bottom: 5px;
 		}
 
 	#description section {
@@ -426,11 +459,13 @@ content {
 	}
 
 	section ul {
+		margin: 0px;
 		padding-right: 20px;
 		padding-left: 25px;
 	}
 
 		section li {
+			page-break-inside: avoid;
 			margin-bottom: 15px;
 		}
 
@@ -439,6 +474,7 @@ content {
 			}	
 
 	#attachments > section {
+		page-break-inside: avoid;
 		text-align: center;
 	}
 
